Bug 310448 - Generated Freebusy iTip-publish objects are invalid
Summary: Generated Freebusy iTip-publish objects are invalid
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kcalcore (other bugs)
Version First Reported In: GIT (master)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on: 310469
Blocks:
  Show dependency treegraph
 
Reported: 2012-11-21 15:10 UTC by Christian Mollekopf
Modified: 2013-05-27 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Mollekopf 2012-11-21 15:10:01 UTC
Instead of dtstamp, dtcreated is used and the uid is not set. Both issues are clearly wrong implementations according to iCalendar rfc2445/rfc5545 respectively iTip rfc rfc2446/rfc5546. (on the iCalendar side the updated versions are a little more explicit but not contradictory).

See http://tools.ietf.org/html/rfc5546#section-3.3.1 for reference.

For all three available methods(reply/request/publish):
* dtstamp MUST be available
* dtcreated MUST NOT be available
* uid MUST be available

currently only dtcreated is used (which is only correct for non-itip objects).

Those problems likely also apply to other objects types such as events/todos, I'll have to check.

Reproducible: Always
Comment 1 Christian Mollekopf 2013-05-27 11:56:11 UTC
Git commit 7f1ba9255143bad5f83ae3a91d60e3b251688dcc by Christian Mollekopf.
Committed on 03/05/2013 at 14:49.
Pushed by cmollekopf into branch 'master'.

Always write UID, also for iTIP messages.

This requirement has changed as of RFC5546:
"Changed the "UID" entry in the "VFREEBUSY" and "PUBLISH" restriction
tables to "1" from "0", to fall in line with [RFC5545]."

This patch requires ical 1.0.

REVIEW: 110666

M  +3    -0    CMakeLists.txt
M  +5    -0    kcalcore/icalformat_p.cpp

http://commits.kde.org/kdepimlibs/7f1ba9255143bad5f83ae3a91d60e3b251688dcc