Always write UID, also for iTIP messages.

This requirement has changed as of RFC5546:
"Changed the "UID" entry in the "VFREEBUSY" and "PUBLISH" restriction
tables to "1" from "0", to fall in line with [RFC5545]."

This patch requires ical 1.0.

REVIEW: 110666
BUG: 310448